Added + buttons and modal to Chest pages.

--- a/chest_103.html
+++ b/chest_103.html
@@ -109,7 +109,37 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Incline Barbell Bench Press</div>
+          <div class="card-header text-left h5">Incline Barbell Bench Press
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Choose a Date</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="row">
+                      <div class="col">
+                        <input type="date" max="2050-12-31" min="2019-01-31">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Add Workout</button>
+                </div>
+              </div>
+            </div>
+          </div>
           <img class="card-img-top" src="incline_bb_bench.jpeg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(5 sets | 15, 12, 12, 4-4-4, 4-4-4)</i></p>
@@ -126,7 +156,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Flat Barbell Bench Press</div>
+          <div class="card-header text-left h5">Flat Barbell Bench Press
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="flat_bb_bench.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets | 12, 10, 8, 6)</i></p>
@@ -145,7 +180,12 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Incline Dumbbell Bench Press</div>
+          <div class="card-header text-left h5">Incline Dumbbell Bench Press
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="incline_db_bench.jpeg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets | 15, 15, 12, 12)</i></p>
@@ -158,7 +198,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Incline Plate Press X Incline Dumbbell Fly</div>
+          <div class="card-header text-left h5">Incline Plate Press X Incline Dumbbell Fly
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -200,7 +245,12 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Incline Hammer Strength Press</div>
+          <div class="card-header text-left h5">Incline Hammer Strength Press
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="incline_hammer_press.jpeg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(3 sets | 5-15, 8-12, 10-10)</i></p>
@@ -214,7 +264,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">High Cable Fly X Low Cable Fly</div>
+          <div class="card-header text-left h5">High Cable Fly X Low Cable Fly
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
