--- a/chest_101.html
+++ b/chest_101.html
@@ -109,14 +109,14 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="workout card-header text-left h5">Flat Barbell Bench Press
-            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+          <div class="card-header text-left h5">Flat Barbell Bench Press
+            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
               <img src="plus.png"  width="20" alt="Plus sign">
               Add to Calendar
             </button>
           </div>
           <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-sm" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -155,7 +155,7 @@
 
         <div class="card">
           <div class="card-header text-left h5">Incline Barbell Bench Press
-            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
               <img src="plus.png"  width="20" alt="Plus sign">
               Add to Calendar
             </button>
@@ -178,7 +178,7 @@
       <div class="card-deck">
         <div class="card">
           <div class="card-header text-left h5">Incline Dumbbell Bench Press
-            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
               <img src="plus.png"  width="20" alt="Plus sign">
               Add to Calendar
             </button>
@@ -196,7 +196,7 @@
 
         <div class="card">
           <div class="card-header text-left h5">Bodyweight Dips
-            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
               <img src="plus.png"  width="20" alt="Plus sign">
               Add to Calendar
             </button>
@@ -217,7 +217,7 @@
       <div class="card-deck mx-auto" style="max-width: 36rem;">
         <div class="card">
           <div class="card-header text-left h5">Push-Ups
-            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#exampleModal">
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
               <img src="plus.png"  width="20" alt="Plus sign">
               Add to Calendar
             </button>
