--- a/back_103.html
+++ b/back_103.html
@@ -109,7 +109,37 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Pull-Ups</div>
+          <div class="card-header text-left h5">Pull-Ups
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Choose a Date</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="row">
+                      <div class="col">
+                        <input type="date" max="2050-12-31" min="2019-01-31">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Add Workout</button>
+                </div>
+              </div>
+            </div>
+          </div>
           <img class="card-img-top" src="pull_ups.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(5 sets | 10, 10, 10, 10 , 10)</i></p>
@@ -123,7 +153,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Barbell Rows</div>
+          <div class="card-header text-left h5">Barbell Rows
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="row_bb.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(5 sets | 15, 12, 10, 4-4-4, 4-4-4)</i></p>
@@ -144,7 +179,12 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Rack Pulls X Dumbbell Rows</div>
+          <div class="card-header text-left h5">Rack Pulls X Dumbbell Rows
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -184,7 +224,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Seated Cable Rows</div>
+          <div class="card-header text-left h5">Seated Cable Rows
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="row_cable.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(3 sets | 20, 15, AMRAP)</i></p>
@@ -203,7 +248,12 @@
     <div class="container">
       <div class="card-deck mx-auto" style="max-width: 36rem;">
         <div class="card">
-          <div class="card-header text-center h5">Lat Pushdowns X Lat Pulldowns X Lat Pulldowns (underhand grip)</div>
+          <div class="card-header text-left h5">Lat Pushdowns X Lat Pulldowns X Lat Pulldowns (underhand grip)
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
