Added + buttons and modal on Legs pages.

--- a/legs_101.html
+++ b/legs_101.html
@@ -109,7 +109,37 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Squats</div>
+          <div class="card-header text-left h5">Squats
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Choose a Date</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="row">
+                      <div class="col">
+                        <input type="date" max="2050-12-31" min="2019-01-31">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Add Workout</button>
+                </div>
+              </div>
+            </div>
+          </div>
           <img class="card-img-top" src="squats.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(5 sets | 15, 15, 12, 12, 10)</i></p>
@@ -125,7 +155,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Barbell Lunges</div>
+          <div class="card-header text-left h5">Barbell Lunges
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="lunges_bb.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets | 12, 12, 10, 10)</i></p>
@@ -144,7 +179,12 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Hamstring Curls</div>
+          <div class="card-header text-left h5">Hamstring Curls
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="incline_db_bench.jpeg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets | 12, 12, 10, 10)</i></p>
@@ -157,7 +197,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Calf Raises</div>
+          <div class="card-header text-left h5">Calf Raises
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="calf_raise_standing.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets | 15, 15, 12, 12)</i></p>
