Added + buttons and modal for Shoulder pages.

--- a/shoulders_103.html
+++ b/shoulders_103.html
@@ -109,7 +109,37 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Hang Clean/Overhead Barbell Press X Upright Rows</div>
+          <div class="card-header text-left h5">Hang Clean/Overhead Barbell Press X Upright Rows
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Choose a Date</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="row">
+                      <div class="col">
+                        <input type="date" max="2050-12-31" min="2019-01-31">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Add Workout</button>
+                </div>
+              </div>
+            </div>
+          </div>
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -153,7 +183,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Dumbbell Lateral Raises</div>
+          <div class="card-header text-left h5">Dumbbell Lateral Raises
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="lateral_raise_db.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(3 sets | 15/12/10, 10/12/15, 15/12/10)</i></p>
@@ -170,7 +205,12 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Seated Arnold Press X Dumbbell Rear Lateral Raises</div>
+          <div class="card-header text-left h5">Seated Arnold Press X Dumbbell Rear Lateral Raises
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -207,7 +247,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Shrugs X Dumbbell Lateral Raises X Rear Delt Rows</div>
+          <div class="card-header text-left h5">Shrugs X Dumbbell Lateral Raises X Rear Delt Rows
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
