--- a/abs_101.html
+++ b/abs_101.html
@@ -109,7 +109,37 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Sit ups X Leg Raises X  Russian Twists</div>
+          <div class="card-header text-left h5">Sit ups X Leg Raises X  Russian Twists
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Choose a Date</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="row">
+                      <div class="col">
+                        <input type="date" max="2050-12-31" min="2019-01-31">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Add Workout</button>
+                </div>
+              </div>
+            </div>
+          </div>
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -151,7 +181,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Ab-Machine Crunches</div>
+          <div class="card-header text-left h5">Ab-Machine Crunches
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="crunches_machine.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(3 sets |12, 12, 12)</i></p>
