--- a/abs_102.html
+++ b/abs_102.html
@@ -109,7 +109,37 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Decline Sit-Ups w/ Twist</div>
+          <div class="card-header text-left h5">Decline Sit-Ups w/ Twist
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Choose a Date</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="row">
+                      <div class="col">
+                        <input type="date" max="2050-12-31" min="2019-01-31">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Add Workout</button>
+                </div>
+              </div>
+            </div>
+          </div>
           <img class="card-img-top" src="sit_ups_decline_twist.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(3 sets |15, 12, 10)</i></p>
@@ -124,7 +154,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Hanging Leg Raises</div>
+          <div class="card-header text-left h5">Hanging Leg Raises
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="leg_lifts_hanging.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(3 sets | 12, 12, 10)</i></p>
@@ -141,7 +176,12 @@
     <div class="container">
       <div class="card-deck mx-auto" style="max-width: 36rem;">
         <div class="card">
-          <div class="card-header text-center h5">Sit-Ups X Leg Raises</div>
+          <div class="card-header text-left h5">Sit-Ups X Leg Raises
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
