--- a/arms_101.html
+++ b/arms_101.html
@@ -108,7 +108,37 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">Close Grip Barbell Bench Press</div>
+          <div class="card-header text-left h5">Close Grip Barbell Bench Press
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Choose a Date</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="row">
+                      <div class="col">
+                        <input type="date" max="2050-12-31" min="2019-01-31">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Add Workout</button>
+                </div>
+              </div>
+            </div>
+          </div>
           <img class="card-img-top" src="close_grip_bench_press_bb.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets |15, 12, 10, 8)</i></p>
@@ -121,7 +151,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Barbell Curls</div>
+          <div class="card-header text-left h5">Barbell Curls
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="curls_bb.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets |15, 12, 10, 8)</i></p>
@@ -137,7 +172,12 @@
     <div class="container">
       <div class="card-deck">
         <div class="card">
-          <div class="card-header text-center h5">EZ-Bar Skullcrusher</div>
+          <div class="card-header text-left h5">EZ-Bar Skullcrusher
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="skullcrusher_ez.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets |15, 12, 10, 10)</i></p>
@@ -149,7 +189,12 @@
         </div>
 
         <div class="card">
-          <div class="card-header text-center h5">Dumbbell Hammer Curls</div>
+          <div class="card-header text-left h5">Dumbbell Hammer Curls
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="card-img-top" src="hammer_curls.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(4 sets |12, 12, 10, 10)</i></p>
@@ -165,7 +210,12 @@
     <div class="container">
       <div class="card-deck mx-auto" style="max-width: 36rem;">
         <div class="card">
-          <div class="card-header text-center h5">Dumbbell Curls X Tricep Pushdowns</div>
+          <div class="card-header text-left h5">Dumbbell Curls X Tricep Pushdowns
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+              <img src="plus.png"  width="20" alt="Plus sign">
+              Add to Calendar
+            </button>
+          </div>
           <img class="tricep_pushdown.jpg" src="row_cable.jpg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text text-center"><i>(2 sets | AMRAP)</i></p>
