--- a/hiit_fl_101.html
+++ b/hiit_fl_101.html
@@ -119,6 +119,37 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">1) Stationary Running <i>x 30 seconds</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Choose a Date</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="row">
+                      <div class="col">
+                        <input type="date" max="2050-12-31" min="2019-01-31">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Add Workout</button>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="stationary_running.JPG" alt="Card image cap">
@@ -128,6 +159,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">2) Push-Ups <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="pushups.jpeg" alt="Card image cap">
@@ -137,6 +174,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">3) Squat Jumps <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="squat_jumps.jpg" alt="Card image cap">
@@ -150,6 +193,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">4) Stationary Running <i>x 30 seconds</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="stationary_running.JPG" alt="Card image cap">
@@ -159,6 +208,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">5) Mountain Climbers <i>x 20 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="mountain_climbers.jpg" alt="Card image cap">
@@ -168,6 +223,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">6) Burpees <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <img class="card-img-top" src="burpees.jpg" alt="Card image cap">
         </div>
@@ -179,6 +240,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">7) Stationary Running <i>x 30 seconds</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="stationary_running.JPG" alt="Card image cap">
@@ -186,5 +253,9 @@
         </div>
       </div>
     </div>
+    <!-- FOOTER -->
+    <footer class="page-footer fixed-bottom font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
