--- a/user_profile.html
+++ b/user_profile.html
@@ -95,35 +95,18 @@
 	          </li>
 	        </ul>
 	      </div>
-<<<<<<< HEAD
-	    </nav><br><br><br><br>
-<body>
-	<div class ="container">
-	<section id="main">
-		<img class="card-img-top" src="download.png" alt="Card image cap">
-		<h5>@Username
-		</h5>	
-		<h5>Profile
-		</h5>
-		<h5>Work Out Goals/Challenges 
-		</h5>
+
+	    </nav>
+	  <br><br><br><br>
 			
-		<input class="button btn-light" type="submit" value="Change Password" name="ChangePassword">
-		<br><br><br><br><br><br><br><br><br><br><br>
+		
 	</section>
-		<aside id="sidebar">
-				<h1>Personal Profile</h1>
-				<form class="my-form">
-					<div class="form-group">
-						<label>Username: </label>
-						<input type="text" name="username">
-=======
-	    </nav><br><br><br><br><br>
+	    </nav>
 		<!-- BODY -->
 		<body>
 			<div class ="container">
 				<div class="row justify-content-md-center">
-					<div class="col-3 border border-info rounded"><br>
+					<div class="col-3 border border-info rounded"><!--<br>-->
 						<img class="card-img-top" src="download.png" alt="Card image cap">
 						<p class="text-center h5">@Username</p><br>
 						<!-- VERTICAL NAV BAR-->
@@ -134,15 +117,16 @@
 							<li>
 						  	<a class="nav-link" href="goals_challenges.html">WORKOUT CALENDAR</a>
 							</li>
-						</div><br>
->>>>>>> fc6274fbc3113e07a6d7089f8542e79bf171ffa5
+						</div>
+						
+
 					</div>
 					<!-- SPACE BETWEEN NAV BAR AND CONTENT -->
 					<div class="col-1">
 					</div>
 					<!-- NAV BAR CONTENT -->
 					<div class="col-8 border border-info rounded">
-						<h1 class="display-4 text-center" style="font-size: 2.7rem">Personal Profile</h1><br>
+						<h1 class="display-4 text-center" style="font-size: 2.7rem">Personal Profile</h1>
 						<form class="my-form">
 							<div class="form-group">
 								<label>Username: </label>
@@ -162,33 +146,23 @@
 							</div>
 							<div class="form-group">
 								<label>Change Password: </label>
-								<input type="text" name="email">
-							</div><br>
-							<div class="text-center">
-								<input class="button" type="submit" value="Update Profile" name="UpdateProfile">
+								<input type="text" name="change_password">
 							</div>
-						</form><br>
+							<div class="text-center">
+								<input class="button btn-light" type="submit" value="Update Profile" name="UpdateProfile">
+							</div>
+						</form>
 					</div>
-<<<<<<< HEAD
-					<div class="form-group">
-						<label>Email: </label>
-						<input type="text" name="email">
-					</div>
-					<input class="button btn-light" type="submit" value="Update Profile" name="UpdateProfile">
-				</form>
-		</aside>
-
-
 	</div>
+</div>
 </body>
 </html>
-=======
-				</div>
-			</div><br><br>
+
 		</body>
+		<br><br><br>
+				
 		<!-- FOOTER -->
-    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+    <footer class="page-footer font-small fixed-bottom" style="background-color: #fd7e14;">
       <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
     </footer>
 </html>
->>>>>>> fc6274fbc3113e07a6d7089f8542e79bf171ffa5
