--- a/hiit_strength_103.html
+++ b/hiit_strength_103.html
@@ -119,15 +119,66 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">1) Push-Ups <i>x 20 reps</i></h5>
-          </div>
+            <div class="text-center">
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           <div class="col-12">
             <img class="card-img-top" src="pushups.jpeg" alt="Card image cap">
           </div>
         </div>
+        <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Choose a Date</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="row">
+                      <div class="col">
+                        <input type="date" max="2050-12-31" min="2019-01-31">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Add Workout</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+      <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">2) Stationary Running <i>x 30 Seconds</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
+          </div>
+          <div class="col-12">
+            <img class="card-img-top" src="stationary_running.JPG" alt="Card image cap">
+          </div>
+      </div>
 
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">2) Plank Rotations <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="plank_rotations.jpg" alt="Card image cap">
@@ -137,6 +188,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">3) Sit-Ups <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="sit_ups.jpg" alt="Card image cap">
@@ -150,6 +207,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">4) Squat Jumps <i>x 20 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="squat_jumps.jpg" alt="Card image cap">
@@ -159,6 +222,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">5) High Knees <i>x 30 seconds</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="high_knees.jpg" alt="Card image cap">
@@ -168,6 +237,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">6) Burpees <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <img class="card-img-top" src="burpees.jpg" alt="Card image cap">
         </div>
@@ -179,6 +254,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">7) Mountain Climbers <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="mountain_climbers.jpg" alt="Card image cap">
@@ -188,6 +269,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">8) Leg Lifts <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="leg_lifts.jpg" alt="Card image cap">
@@ -197,6 +284,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">9) Alternating Lunges <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <img class="card-img-top" src="alternating_lunges.jpg" alt="Card image cap">
         </div>
@@ -209,6 +302,12 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">10) Squat Jumps <i>x 10 reps</i></h5>
+              <div class="text-center">
+                <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                  <img src="plus.png"  width="20" alt="Plus sign">
+                  Add to Calendar
+                </button>
+              </div>
             </div>
             <div class="col-12">
               <img class="card-img-top" src="squat_jumps.jpg" alt="Card image cap">
@@ -218,6 +317,12 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">11) Stationary Running <i>x 30 seconds</i></h5>
+              <div class="text-center">
+                <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                  <img src="plus.png"  width="20" alt="Plus sign">
+                  Add to Calendar
+                </button>
+              </div>
             </div>
             <div class="col-12">
               <img class="card-img-top" src="stationary_running.JPG" alt="Card image cap">
