Add to calendar buttons

--- a/hiit_strength_103.html
+++ b/hiit_strength_103.html
@@ -120,7 +120,7 @@
           <div class="card-body">
             <h5 class="card-title">1) Push-Ups <i>x 20 reps</i></h5>
             <div class="text-center">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+              <button type="button" class="d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
                 <img src="plus.png"  width="20" alt="Plus sign">
                 Add to Calendar
               </button>
@@ -160,7 +160,7 @@
           <div class="card-body">
             <h5 class="card-title">2) Plank Rotations <i>x 10 reps</i></h5>
             <div class="text-center">
-              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
                 <img src="plus.png"  width="20" alt="Plus sign">
                 Add to Calendar
               </button>
@@ -175,7 +175,7 @@
           <div class="card-body">
             <h5 class="card-title">3) Sit-Ups <i>x 10 reps</i></h5>
             <div class="text-center">
-              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
                 <img src="plus.png"  width="20" alt="Plus sign">
                 Add to Calendar
               </button>
@@ -194,7 +194,7 @@
           <div class="card-body">
             <h5 class="card-title">4) Squat Jumps <i>x 20 reps</i></h5>
             <div class="text-center">
-              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
                 <img src="plus.png"  width="20" alt="Plus sign">
                 Add to Calendar
               </button>
@@ -209,7 +209,7 @@
           <div class="card-body">
             <h5 class="card-title">5) High Knees <i>x 30 seconds</i></h5>
             <div class="text-center">
-              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
                 <img src="plus.png"  width="20" alt="Plus sign">
                 Add to Calendar
               </button>
@@ -224,7 +224,7 @@
           <div class="card-body">
             <h5 class="card-title">6) Burpees <i>x 10 reps</i></h5>
             <div class="text-center">
-              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
                 <img src="plus.png"  width="20" alt="Plus sign">
                 Add to Calendar
               </button>
@@ -241,7 +241,7 @@
           <div class="card-body">
             <h5 class="card-title">7) Mountain Climbers <i>x 10 reps</i></h5>
             <div class="text-center">
-              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
                 <img src="plus.png"  width="20" alt="Plus sign">
                 Add to Calendar
               </button>
@@ -256,7 +256,7 @@
           <div class="card-body">
             <h5 class="card-title">8) Leg Lifts <i>x 10 reps</i></h5>
             <div class="text-center">
-              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
                 <img src="plus.png"  width="20" alt="Plus sign">
                 Add to Calendar
               </button>
@@ -271,7 +271,7 @@
           <div class="card-body">
             <h5 class="card-title">9) Alternating Lunges <i>x 10 reps</i></h5>
             <div class="text-center">
-              <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
                 <img src="plus.png"  width="20" alt="Plus sign">
                 Add to Calendar
               </button>
@@ -289,7 +289,7 @@
             <div class="card-body">
               <h5 class="card-title">10) Squat Jumps <i>x 10 reps</i></h5>
               <div class="text-center">
-                <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
                   <img src="plus.png"  width="20" alt="Plus sign">
                   Add to Calendar
                 </button>
@@ -304,7 +304,7 @@
             <div class="card-body">
               <h5 class="card-title">11) Stationary Running <i>x 30 seconds</i></h5>
               <div class="text-center">
-                <button type="button" class= "btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
                   <img src="plus.png"  width="20" alt="Plus sign">
                   Add to Calendar
                 </button>
