--- a/hiit_strength_102.html
+++ b/hiit_strength_102.html
@@ -119,7 +119,40 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">1) Push-Ups <i>x 20 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
+
+    <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Choose a Date</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="row">
+                      <div class="col">
+                        <input type="date" max="2050-12-31" min="2019-01-31">
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Add Workout</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-12">
             <img class="card-img-top" src="pushups.jpeg" alt="Card image cap">
           </div>
@@ -128,6 +161,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">2) Plank Tucks <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="plank_tucks.jpg" alt="Card image cap">
@@ -137,6 +176,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">3) Squat Jumps <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="squat_jumps.jpg" alt="Card image cap">
@@ -150,6 +195,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">4) Push-Ups <i>x 20 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="pushups.jpeg" alt="Card image cap">
@@ -159,6 +210,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">5) Leg Lifts <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="leg_lifts.jpg" alt="Card image cap">
@@ -168,6 +225,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">6) Alternating Lunges <i>x 10 seconds</i></h5>
+            <div class="text-center">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <img class="card-img-top" src="alternating_lunges.jpg" alt="Card image cap">
         </div>
@@ -179,6 +242,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">7) Burpees <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="burpees.jpg" alt="Card image cap">
@@ -188,6 +257,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">8) Sit-Ups <i>x 10 reps</i></h5>
+            <div class="text-center">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <div class="col-12">
             <img class="card-img-top" src="sit_ups.jpg" alt="Card image cap">
@@ -197,6 +272,12 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">9) Stationary Running <i>x 30 seconds</i></h5>
+            <div class="text-center">
+              <button type="button" class= "d-none btn btn-primary" data-toggle="modal" data-target="#myModal">
+                <img src="plus.png"  width="20" alt="Plus sign">
+                Add to Calendar
+              </button>
+            </div>
           </div>
           <img class="card-img-top" src="stationary_running.JPG" alt="Card image cap">
         </div>
