--- a/treadmill.html
+++ b/treadmill.html
@@ -95,7 +95,7 @@
       <div class="card-deck">
         <div class="card">
           <div class="card-header text-center h5">Fat Loss</div>
-            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
               <img src="plus.png"  width="20" alt="Plus sign">
               Add to Calendar
             </button>
@@ -138,7 +138,7 @@
 
         <div class="card">
           <div class="card-header text-center h5">Conditioning</div>
-            <button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
+            <button type="button" class="d-none btn btn-primary float-right" data-toggle="modal" data-target="#myModal">
               <img src="plus.png"  width="20" alt="Plus sign">
               Add to Calendar
             </button>
